# macro-rules-rt

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: example.rs
src/: lib.rs  match_all.rs  matcher.rs  parser.rs  syn_utils.rs  syntax.rs  text.rs  token_entry.rs  token_fragment.rs  transcriber.rs  utils.rs
tests/: match_all.rs  matcher.rs  pattern.rs  proptest.proptest-regressions  proptest.rs  replace_all.rs  replace_all_str.rs  replace_all_tokens.rs
tests/proptest/: Cargo.toml
tests/proptest/src/: utils.rs
