[package]
name = "macro-rules-rt"
version = "0.1.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/macro-rules-rt"
documentation = "https://docs.rs/macro-rules-rt/"
keywords = ["macro_rules"]
categories = ["development-tools::procedural-macro-helpers"]
description = "macro_rules available at runtime."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.109", features = ["full", "extra-traits"] }
quote = "1.0.23"
proc-macro2 = { version = "1.0.51", features = ["span-locations"] }
structmeta = { path = "../structmeta/structmeta" }
