[package]
name = "macro-rules-rt"
version = "0.1.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/macro-rules-rt"
documentation = "https://docs.rs/macro-rules-rt/"
keywords = ["macro_rules"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Transforms text or TokenStream using Rust's macro_rules syntax."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.13", features = ["full", "extra-traits"] }
quote = "1.0.26"
proc-macro2 = { version = "1.0.55", features = ["span-locations"] }
structmeta = "0.2.0"

[dev-dependencies]
proptest = "1.1.0"
test-strategy = "0.3.0"
anyhow = "1.0.70"
pretty_assertions = "1.3.0"
