[package]
name = "macro-rules-rt-tester"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.109", features = ["full", "extra-traits"] }
quote = "1.0.24"
proc-macro2 = { version = "1.0.52", features = ["span-locations"] }
macro-rules-rt = { path = "../../../macro-rules-rt" }
